<resources>
    <string name="app_name">billcalculator</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="nosvs">No SVS</string>
    <string name="gst">GST</string>
    <string name="disc">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="nogst">No GST</string>
    <string name="svs">SVS</string>
</resources>